# libdungeon

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
include/: character.hpp  dice.hpp  libdungeon.hpp
src/: character.cpp  dice.cpp  libdungeon.cpp  main.cpp
tests/: test.cpp
